<resources>
    <string name="app_name">Atractores</string>
    <string name="realizar_levantamiento">Realizar levantamiento</string>
    <string name="modificar_levantamiento">Modificar levantamiento</string>
    <string name="subir_levantamiento">Subir levantamiento</string>
    <string name="fecha_levantamiento">Fecha levantamiento:</string>
    <string name="latitud_levantamiento">Latitud levantamiento:</string>
    <string name="longitud_levantamiento">Longitud levantamiento:</string>
    <string name="calle_levantamiento">Calle:</string>
    <string name="agregar_levantamiento">Agregar levantamiento</string>
    <string name="eliminar_levantamiento">Eliminar levantamiento</string>
    <string name="levantamiento">Levantamiento</string>
    <string name="fecha">Fecha</string>
    <string name="informacion_atractor">Informacion atractor</string>
    <string name="tamaño">Tamaño</string>
    <string name="grande">Grande</string>
    <string name="mediano">Mediano</string>
    <string name="pequeño">Pequeño</string>
    <string name="atencion">Atencion</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>
    <string name="todos_los_dias">Todos los dias</string>
    <string name="fin_de_semana">Fin de semana</string>
    <string name="entre_semana">Entre seamana</string>
    <string name="horario">Horario</string>
    <string name="matutino">Matutino</string>
    <string name="vespertino">Vespertino</string>
    <string name="diurno">Diurno</string>
    <string name="nocturno">Nocturno</string>
    <string name="todo_dia">24 horas</string>
    <string name="aceptar">Aceptar</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="atractor">Atractor #</string>
</resources>