<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/componente"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/informacion_atractor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tamaño"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgTamano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbGrande"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/grande" />

                <RadioButton
                    android:id="@+id/rbMediano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mediano" />

                <RadioButton
                    android:id="@+id/rbPequeno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pequeño" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atencion"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgAtencion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbLunes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/lunes" />

                    <RadioButton
                        android:id="@+id/rbMartes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/martes" />

                    <RadioButton
                        android:id="@+id/rbMiercoles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/miercoles" />

                    <RadioButton
                        android:id="@+id/rbJueves"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jueves" />

                    <RadioButton
                        android:id="@+id/rbViernes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/viernes" />

                    <RadioButton
                        android:id="@+id/rbSabado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sabado" />

                    <RadioButton
                        android:id="@+id/rbDomingo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/domingo" />

                    <RadioButton
                        android:id="@+id/rbTodosDias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todos_los_dias" />

                    <RadioButton
                        android:id="@+id/rbFinSemana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fin_de_semana" />

                    <RadioButton
                        android:id="@+id/rbEntreSemana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entre_semana" />

                </GridLayout>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horario"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rgHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMatutino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/matutino" />

                    <RadioButton
                        android:id="@+id/rbVespertino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vespertino" />

                    <RadioButton
                        android:id="@+id/rbDiurno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diurno" />

                    <RadioButton
                        android:id="@+id/rbNocturno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nocturno" />

                    <RadioButton
                        android:id="@+id/rbTodoDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todo_dia" />

                </GridLayout>

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/aceptar" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>